# mcux-sdk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  EVK-MCIMX7ULP_manifest_v3_10.xml  EVK-MIMX8MM_manifest_v3_10.xml  EVK-MIMX8MNDDR3L_manifest_v3_10.xml  EVK-MIMX8MN_manifest_v3_10.xml  EVK-MIMX8MP_manifest_v3_10.xml  EVK-MIMX8MQ_manifest_v3_10.xml  EVK-MIMXRT1010_manifest_v3_10.xml  EVK-MIMXRT1015_manifest_v3_10.xml  EVK-MIMXRT1020_manifest_v3_10.xml  EVK-MIMXRT1060_manifest_v3_10.xml  EVK-MIMXRT1064_manifest_v3_10.xml  EVK-MIMXRT595_manifest_v3_10.xml  EVK-MIMXRT685_manifest_v3_10.xml  EVKB-IMXRT1050_manifest_v3_10.xml  FRDM-K22F_manifest_v3_10.xml  FRDM-K32L2A4S_manifest_v3_10.xml  FRDM-K32L2B_manifest_v3_10.xml  FRDM-K32L3A6_manifest_v3_10.xml  FRDM-KE02Z40M_manifest_v3_10.xml  FRDM-KE15Z_manifest_v3_10.xml  FRDM-KE16Z_manifest_v3_10.xml  FRDM-KE17Z_manifest_v3_10.xml  FRDM-KV11Z_manifest_v3_10.xml  FRDM-KV31F_manifest_v3_10.xml  HVP-KV11Z75M_manifest_v3_10.xml  HVP-KV31F120M_manifest_v3_10.xml  Kconfig  LA_OPT_NXP_Software_License.htm  LA_OPT_NXP_Software_License.txt  LICENSE.htm  LPC845BREAKOUT_manifest_v3_10.xml  LPCXpresso51U68_manifest_v3_10.xml  LPCXpresso54628_manifest_v3_10.xml  LPCXpresso54S018M_manifest_v3_10.xml  LPCXpresso54S018_manifest_v3_10.xml  LPCXpresso55S06CP_manifest_v3_10.xml  (+23 more)
components/els_pkc/: CMakeLists.txt  LICENSE.htm  ReleaseNotes.txt  component_els_pkc.cmake  component_els_pkc_aead.cmake  component_els_pkc_aead_modes.cmake  component_els_pkc_aes.cmake  component_els_pkc_cipher.cmake  component_els_pkc_cipher_modes.cmake  component_els_pkc_core.cmake  component_els_pkc_data_integrity.cmake  component_els_pkc_ecc.cmake  component_els_pkc_els.cmake  component_els_pkc_els_common.cmake  component_els_pkc_els_header_only.cmake  component_els_pkc_examples.cmake  component_els_pkc_flow_protection.cmake  component_els_pkc_hash.cmake  component_els_pkc_hashmodes.cmake  component_els_pkc_hmac.cmake  component_els_pkc_key.cmake  component_els_pkc_mac.cmake  component_els_pkc_mac_modes.cmake  component_els_pkc_math.cmake  component_els_pkc_memory.cmake  component_els_pkc_padding.cmake  component_els_pkc_param_integrity.cmake  component_els_pkc_pkc.cmake  component_els_pkc_platform_rw61x.cmake  component_els_pkc_platform_rw61x_interface_files.cmake  component_els_pkc_platform_rw61x_standalone_clib_gdet_sensor.cmake  component_els_pkc_pre_processor.cmake  component_els_pkc_prng.cmake  component_els_pkc_psa_driver.cmake  component_els_pkc_random.cmake  component_els_pkc_random_modes.cmake  component_els_pkc_rsa.cmake  component_els_pkc_secure_counter.cmake  component_els_pkc_session.cmake  component_els_pkc_standalone_gdet.cmake  (+7 more)
components/els_pkc/examples/: CMakeLists.txt
components/els_pkc/examples/mcuxClAeadModes/: mcuxClAeadModes_Els_Ccm_Aes128_Multipart_example.c  mcuxClAeadModes_Els_Ccm_Aes128_Oneshot_example.c  mcuxClAeadModes_Els_Gcm_Aes128_Oneshot_example.c  mcuxClAeadModes_Multipart_Els_Ccm_Example.c  mcuxClAeadModes_Oneshot_Els_Ccm_Example.c  mcuxClAeadModes_Oneshot_Els_Gcm_Example.c  mcuxClAeadModes_multiPart_ELS_CCM_example.c  mcuxClAeadModes_oneshot_ELS_CCM_example.c  mcuxClAeadModes_oneshot_ELS_GCM_example.c
components/els_pkc/examples/mcuxClCipherModes/: mcuxClCipherModes_CBC_Multipart_ELS_example.c  mcuxClCipherModes_CBC_Oneshot_ELS_example.c  mcuxClCipherModes_CBC_Oneshot_ZeroPadding_ELS_example.c  mcuxClCipherModes_CTR_Multipart_ELS_example.c  mcuxClCipherModes_CTR_Oneshot_ELS_example.c  mcuxClCipherModes_ECB_Multipart_ELS_example.c  mcuxClCipherModes_ECB_Multipart_PaddingPKCS7_ELS_example.c  mcuxClCipherModes_ECB_Oneshot_ELS_example.c  mcuxClCipherModes_ECB_Oneshot_PaddingPKCS7_ELS_example.c  mcuxClCipherModes_ECB_Oneshot_ZeroPadding_ELS_example.c  mcuxClCipherModes_Els_Cbc_Aes128_Multipart_example.c  mcuxClCipherModes_Els_Cbc_Aes128_Oneshot_PaddingZero_example.c  mcuxClCipherModes_Els_Cbc_Aes128_Oneshot_example.c  mcuxClCipherModes_Els_Ctr_Aes128_Multipart_example.c  mcuxClCipherModes_Els_Ctr_Aes128_Oneshot_example.c  mcuxClCipherModes_Els_Ecb_Aes128_Multipart_PaddingPKCS7_example.c  mcuxClCipherModes_Els_Ecb_Aes128_Multipart_example.c  mcuxClCipherModes_Els_Ecb_Aes128_Oneshot_PaddingPKCS7_example.c  mcuxClCipherModes_Els_Ecb_Aes128_Oneshot_PaddingZero_example.c  mcuxClCipherModes_Els_Ecb_Aes128_Oneshot_example.c  mcuxClCipherModes_Multipart_Cbc_Els_example.c  mcuxClCipherModes_Multipart_Ctr_Els_example.c  mcuxClCipherModes_Multipart_Ecb_Els_example.c  mcuxClCipherModes_Multipart_Ecb_PaddingPKCS7_Els_example.c  mcuxClCipherModes_Oneshot_Cbc_Els_example.c  mcuxClCipherModes_Oneshot_Cbc_ZeroPadding_Els_example.c  mcuxClCipherModes_Oneshot_Ctr_Els_example.c  mcuxClCipherModes_Oneshot_Ecb_Els_example.c  mcuxClCipherModes_Oneshot_Ecb_PaddingPKCS7_Els_example.c  mcuxClCipherModes_Oneshot_Ecb_ZeroPadding_Els_example.c
components/els_pkc/examples/mcuxClEcc/: mcuxClEcc_EdDSA_Ed25519_example.c  mcuxClEcc_EdDSA_Ed25519ctx_example.c  mcuxClEcc_EdDSA_Ed25519ph_example.c  mcuxClEcc_EdDSA_GenerateKeyPair_Ed25519_example.c  mcuxClEcc_EdDSA_GenerateSignature_Ed25519_example.c  mcuxClEcc_EdDSA_VerifySignature_Ed25519_example.c  mcuxClEcc_MontDH_Curve25519_example.c  mcuxClEcc_MontDH_Curve448_example.c  mcuxClEcc_Mont_Curve25519_example.c  mcuxClEcc_Mont_Curve448_example.c  mcuxClEcc_WeierECC_CustomEccWeierType_BN256_example.c
components/els_pkc/examples/mcuxClEls/: mcuxClEls_Cipher_Aes128_Cbc_Encrypt_example.c  mcuxClEls_Cipher_Aes128_Ecb_Encrypt_example.c  mcuxClEls_Common_Get_Info_example.c  mcuxClEls_Ecc_Keygen_Sign_Verify_example.c  mcuxClEls_Hash_HW_Security_Counter_example.c  mcuxClEls_Hash_Sha224_One_Block_example.c  mcuxClEls_Hash_Sha256_One_Block_example.c  (+4 more)
components/els_pkc/src/: CMakeLists.txt
components/psa_crypto_driver/: CMakeLists.txt  set_component_psa_crypto_driver.cmake
components/psa_crypto_driver/ele_s4xx/: ele_s4xx_crypto_primitives.h
components/psa_crypto_driver/mbedtls_thread_alt/: threading_alt.c  threading_alt.h
components/psa_crypto_driver/osal/: CMakeLists.txt  osal_mutex.h
(+39498 files in other folders)
